# trello-ai-task-assistant

./: .gitignore  AI_USAGE.md  README.md  main.py  pyproject.toml  test_model.py  test_trello.py
app/: app.py
tests/: test_app.py
